--- a/how-to-play.html
+++ b/how-to-play.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Skintoto adalah situs slot online, togel, roulette, craps, baccarat, situs judi online terbaik dan terbesar di Indonesia.">
+    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
   <meta name="keywords"
-    content="skintoto, daftar skintoto, login skintoto, skintoto 88, link alternatif skintoto, skintoto slot, skinslot, skintogel, bandar toto macau, agen sot online, situs slot gacor, bandar togel, agen togel, judi online, togel online, casino online, bandar togel online, agen togel terpercaya, judi online togel, judi online casino, bandar casino online, skintoto apk,">
+    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-  <title></title>
+  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
 <body class="body">
   <header class="header">
     <div class="container">
-        <nav class="menu">
-          <button class="menu__btn" type="button">
-            <span></span>
-            <span class="sr-only">відкрити меню</span>
-          </button>
-          <ul class="menu__items">
-            <li class="menu__item">
-              <a class="menu__link" href="">
-                Skintoto
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="how-to-play.html">
-                Cara Bermain
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="promosi.html">
-                Promosi
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="skintoto-login.html">
-                Login
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="skintoto-slot.html">
-                Skintoto slot
-              </a>
-            </li>
-          </ul>
-        </nav>
+      <nav class="menu">
+        <button class="menu__btn" type="button">
+          <span></span>
+          <span class="sr-only">відкрити меню</span>
+        </button>
+        <ul class="menu__items">
+          <li class="menu__item">
+            <a class="menu__link" href="">
+              sushi
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="how-to-play.html">
+              Cara Bermain
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="promosi.html">
+              Promosi
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="sushi-login.html">
+              Login
+            </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="sushi-slot.html">
+              sushi slot
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -59,24 +59,22 @@
     <section class="section">
       <div class="container">
         <h2 class="title">
-          SKINTOTO CARA BERMAIN
+          Sushi e Cassino no Brasil: Uma Fusão de Culturas e Sabores
         </h2>
-        <img class="img" src="images/9.png" alt="9">
+        <img class="img" src="images/garota.png"
+          alt="1 garota, braçadeira, ombros nus, céu azul, corar, seios, decote, dia, brincos, peixe, comida, sardas, olhos verdes, joias, seios grandes, lábios, cabelos longos, olhando para o espectador, colar, ao ar livre, cabelo rosa, camarão, céu, sorriso, sozinha, sushi, parte superior do corpo">
       </div>
     </section>
 
     <section class="section">
       <div class="container">
         <h2 class="title">
-          NOMOR KELUAR
+          Sushi, Cassino e Brasil: Uma Combinação de Sabores e Diversã
         </h2>
         <div class="text">
           <span>
-            nomor pengeluaran adalah berdasar kan 1st prize nomor yang dihasilkan oleh 4D Singapore untuk melihat
-            hasil
-            nomor
-            tersebut bisa dilihat di
-            skintoto-id.com.
+            Sabor e entretenimento se encontram no sushi-casino do Brasil, onde a culinária japonesa se une à emoção do
+            jogo.
           </span>
           <p>
             Contoh nomor bola angka yang dihasilkan Singapore toto:
@@ -113,14 +111,16 @@
           <p>Puluhan = 85</p>
           <span>Hasilnya = buka 0885</span>
           <div class="text">
-            Untuk melihat hasil dari perputaran nomor untuk toto Jakarta ini bisa dilihat di website resminya
-            skintoto-id.com..
+            Sushi e cassino no Brasil combinam gastronomia refinada com entretenimento emocionante, criando uma
+            experiência única
+            para os visitantes.
           </div>
           <div class="text">
-            Untuk togel jenis 4D Jakarta pengeluaran setiap hari kami mengambil pedoman sebagai nomor
-            pengeluaran adalah berdasar
-            kan 1st prize nomor yang dihasilkan oleh 4D Jakarta untuk melihat hasil nomor tersebut bisa dilihat di
-            skintoto-id.com.
+            No Brasil, sushi e cassino se combinam para oferecer uma experiência única, onde os sabores asiáticos se
+            encontram com a
+            emoção dos jogos. É uma fusão de culinária e entretenimento que atrai tanto locais quanto turistas, criando
+            uma
+            atmosfera vibrante e cativante.
           </div>
           <a class="link" href="">
             DAFTAR
@@ -132,14 +132,13 @@
     <section class="section">
       <div class="container">
         <h2 class="title">
-          JENIS PERMAINAN
+          Sushi e Cassino: Uma Experiência Brasileira
         </h2>
         <div class="text">
           <span>
-            Jenis permainan togel sudah sangat banyak, sudah membaur dan menyesuaikan diri dengan permainan lokal.
-            Alhasil
-            dikenal
-            beberapa karakteristik togel daerah.
+            Sushi e cassino no Brasil combinam a sofisticação da culinária oriental com a adrenalina dos jogos, criando
+            uma
+            experiência única e envolvente para os visitantes.
           </span>
           <span>Jenis permainan yang disajikan disini adalah:</span>
           <p>4D, 3D dan 2D</p>
@@ -168,10 +167,10 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/10.png" alt="10">
+      <img class="img" src="images/hashis.png" alt="6+ meninos, 6+ meninas, barba, cabelo preto, camisa preta, calça jeans azul, cadeira, hashis, olhos fechados, copo, jeans, bolinho cozido, comendo, pelos faciais, comida, coque de cabelo, chapéu, segurando, dentro, jaqueta, calça jeans, joias, cabelo comprido, mangas compridas, makizushi, vários meninos, várias meninas, bigode, boca aberta, camisa laranja, calças, prato, restaurante, camisa, sapatos, cabelo curto, sentado, sorriso, óculos de sol, sushi, suéter, mesa, relógio, camisa branca, relógio de pulso, camisa amarela">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">skintoto-id.com</a>
+        <a href="#">sushi-id.com</a>
       </div>
     </div>
   </footer>
