--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Skintoto adalah situs slot online, togel, roulette, craps, baccarat, situs judi online terbaik dan terbesar di Indonesia.">
+    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
   <meta name="keywords"
-    content="skintoto, daftar skintoto, login skintoto, skintoto 88, link alternatif skintoto, skintoto slot, skinslot, skintogel, bandar toto macau, agen sot online, situs slot gacor, bandar togel, agen togel, judi online, togel online, casino online, bandar togel online, agen togel terpercaya, judi online togel, judi online casino, bandar casino online, skintoto apk,">
+    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <!-- htnl -->
   <!-- css -->
-  <title></title>
-  <link href="https://skintoto-id.com" rel="canonical">
+  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://sushi-id.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -30,7 +29,7 @@
         <ul class="menu__items">
           <li class="menu__item">
             <a class="menu__link" href="">
-              Skintoto
+              sushi
             </a>
           </li>
           <li class="menu__item">
@@ -44,13 +43,13 @@
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="skintoto-login.html">
+            <a class="menu__link" href="sushi-login.html">
               Login
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="skintoto-slot.html">
-              Skintoto slot
+            <a class="menu__link" href="sushi-slot.html">
+              sushi slot
             </a>
           </li>
         </ul>
@@ -61,44 +60,47 @@
     <section class="section">
       <div class="container">
         <h1 class="sr-only">
-          SKINTOTO BANDAR TOGEL
+          Sushi e Cassinos: A Experiência Única do Brasil
         </h1>
-
         <h2 class="sr-only">
-          SKINTOTO BANDAR TOGEL
+          Saboreie sushi em cassinos brasileiros, uma fusão emocionante de sabores e entretenimento.
         </h2>
-        <img class="img" src="images/1.png" alt="1">
+        <img class="img" src="images/peixe.png"
+          alt="palitos de hashi, texto em inglês, peixe, comida, foco na comida, makizushi, carne, sem seres humanos, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
-          SKINTOTO TOGEL ONLINE SLOT ADALAH YANG TERBAIK DI INDONESIA
+        <h2 class="title">
+          Sushi e Cassinos: Uma Experiência de Sabores e Diversão no Brasil
         </h2>
         <div class="text">
-          Skintoto adalah situs judi online terbaik untuk Togel, Toto SGP, Toto HK. Menawarkan pasar
-          lotere di Singapura dan
-          lotere Hong Kong, yang saat ini menjadi salah satu pasar lotere terbesar di Indonesia.
+          Desfrute do sushi em cassinos brasileiros, uma fusão emocionante que cativa os sentidos e proporciona
+          momentos
+          únicos de prazer gastronômico.
           <!-- 3 строчки -->
         </div>
 
         <a class="link" href="#">DAFTAR</a>
         <a class="link" href="#">LOGIN</a>
         <div class="text">
-          Skintoto telah menjadi dealer resmi lotere di Indonesia dengan jumlah penggemar lotere online, judi, dan slot
-          yang
-          besar.
+          <!-- 4 строчки -->
+          Saboreie sushi em cassinos brasileiros, onde a excelência culinária encontra a emoção dos jogos de azar. Essa
+          mistura
+          única oferece uma experiência cativante, que combina sabores sofisticados com diversão emocionante, criando
+          momentos
+          memoráveis para os visitantes.
         </div>
-        <img class="img" src="images/2.png" alt="2">
+        <img class="img" src="images/comida.png"
+          alt="texto em inglês, peixe, comida, foco na comida, makizushi, sem seres humanos, omelete, onigiri, arroz, camarão, natureza morta, sushi, tamagoyaki">
         <div class="text">
           <!-- 4 строчки -->
-          Lotere Singapura dan lotere Hong Kong menjadi pasar tiket lotere paling populer di Indonesia karena kedua
-          pasar
-          ini
-          dianggap paling dapat diandalkan dan aman untuk semua orang, sehingga Skintoto juga menjadi kolam resmi untuk
-          kedua
-          negara tersebut.
+          Desfrute de sushi em cassinos brasileiros, uma fusão deliciosa de sabores sofisticados e entretenimento
+          emocionante. No
+          Brasil, essa combinação oferece uma experiência única, onde os paladares refinados se encontram com a
+          adrenalina dos
+          jogos de azar, proporcionando momentos memoráveis de prazer gastronômico e diversão.
         </div>
         <a class="link" href="#">DAFTAR</a>
         <a class="link" href="#">LOGIN</a>
@@ -108,21 +110,22 @@
     <section class="section">
       <div class="container">
         <h2 class="__title title">
-          Tentang Lotre Online SKINTOTO
+          Sushi e Cassinos: Uma Fusão de Sabores e Entretenimento no Brasil
         </h2>
-        <img class="img" src="images/3.png" alt="3">
+        <img class="img" src="images/barba.png"
+          alt="
+1 menina, 2 meninos, barba, cabelo preto, tigela, olhos fechados, pelos faciais, comida, chapéu, múltiplos meninos, bigode, sorriso, sushi">
         <div class="text">
           <!-- 8 строчек -->
-          SKINTOTO adalah situs kasino online terbesar dan paling terpercaya yang sangat terkenal di Indonesia. SKINTOTO
-          memiliki
-          lisensi PAGCOR dan selalu memberikan layanan terbaik kepada para pemainnya, serta menjamin bahwa setiap
-          taruhan menang
-          dalam lotere atau permainan kasino langsung yang Anda menangkan akan dibayar sepenuhnya. SKINTOTO didukung
-          oleh
-          pelayanan berkualitas dan profesional serta menjamin kenyamanan bagi setiap peserta yang ingin mendaftar dan
-          bermain di
-          SKINTOTO. Oleh karena itu, SKINTOTO memperoleh gelar situs judi online terbaik dan paling terpercaya di
-          Indonesia.
+          Desfrute da experiência única de saborear sushi em cassinos brasileiros, onde a culinária japonesa se encontra
+          com a
+          emoção dos jogos de azar. Essa combinação oferece uma jornada sensorial irresistível, onde os paladares
+          refinados são
+          agraciados com a excelência gastronômica enquanto se entregam à diversão dos cassinos. No Brasil, essa fusão
+          de sabores
+          sofisticados e entretenimento emocionante cria momentos memoráveis e envolventes para os visitantes,
+          proporcionando uma
+          experiência gastronômica e de diversão incomparável.
         </div>
         <a class="link" href="#">DAFTAR</a>
         <a class="link" href="#">LOGIN</a>
@@ -132,32 +135,33 @@
     <section class="section">
       <div class="container">
         <h2 class="__title title">
-          Manfaat kasino online dan permainan SKINTOTO.
+          Sabor e Sorte: O Encanto do Sushi nos Cassinos Brasileiros
         </h2>
         <div class="text">
           <!-- 19 строчек -->
-          Anda bisa mendapatkan banyak keuntungan dengan bermain di situs kasino online SKINTOTO. Situs ini memiliki
-          layanan
-          pelanggan profesional yang selalu memberikan tingkat layanan terbaik dan kenyamanan bagi para peserta. Situs
-          resmi
-          lotere online SKINTOTO juga menjamin bahwa setiap proses deposit dan penarikan dana akan berlangsung dengan
-          mudah,
-          cepat, aman, dan terpercaya. Selain itu, SKINTOTO memiliki proses top up deposit yang mudah, karena Anda dapat
-          menggunakan BCA, BRI, BNI, Mandiri, Danamon, CIMB, BSI, Ovo, Gopay, Dana, Link Aja, BRI Link, mata uang
-          kripto, dan
-          metode pembayaran lainnya. Dengan hanya melakukan deposit sebesar 10.000 dan taruhan minimum 100 rupiah, Anda
-          dapat
-          melakukan taruhan resmi lotere online, seperti Wongkong, Singapura, Sydney, Kamboja, Taiwan, Kolam Tiongkok,
-          Maladewa,
-          Swiss, Asia, Toto Macao, Amerika, Night in Singapore, Night in Sydney, Night in Cambodia, Night in China,
-          Magnum 4D hari
-          ini. Anda juga dapat menikmati game modern terbaik secara langsung dengan INDONESIA PLAY dan slot online
-          GACOR, dari
-          pengembang seperti Pragmatic Play, Microgaming, Isoftbet, PGsoft, Idnslot, roulette, sicbo, andar bahar,
-          baccarat, dan
-          banyak lagi game dan slot seperti Gates of Olympus, Sweet bonanza, dll. Mainkan dan menangkan setiap hari!
-          Karena dengan
-          Skintoto, hal itu mungkin dan mudah dilakukan. Semoga berhasil!
+          Em meio ao brilho dos cassinos brasileiros, o sushi se destaca como uma opção gastronômica sofisticada,
+          oferecendo uma
+          experiência culinária única. Com uma variedade de pratos criativos e frescos, os visitantes podem saborear a
+          fusão de
+          sabores exóticos enquanto desfrutam da emoção dos jogos de azar.
+
+          O Brasil, conhecido por sua rica diversidade cultural, abraça a culinária japonesa de maneira única,
+          incorporando
+          ingredientes locais e técnicas de preparo inovadoras. Nos cassinos, essa fusão culinária ganha vida,
+          oferecendo aos
+          clientes uma experiência gastronômica memorável.
+
+          Além de satisfazer os paladares mais exigentes, os cassinos brasileiros proporcionam uma atmosfera envolvente
+          e
+          emocionante. Desde mesas de jogos vibrantes até shows ao vivo e entretenimento de classe mundial, os
+          visitantes têm uma
+          experiência completa de diversão e prazer.
+
+          Com a popularidade crescente do sushi e dos cassinos, essa combinação única continua a atrair tanto os
+          moradores locais
+          quanto os turistas. É uma verdadeira celebração de sabores, sorte e diversão, que torna cada visita aos
+          cassinos
+          brasileiros uma experiência inesquecível.
         </div>
         <a class="link" href="#">DAFTAR</a>
         <a class="link" href="#">LOGIN</a>
@@ -167,21 +171,21 @@
     <section class="section">
       <div class="container">
         <h2 class="__title title">
-          Skintoto APK
+          O Impacto dos Apps na Sociedade Brasileira
         </h2>
-        <img class="img" src="images/4.png" alt="4">
+        <img class="img" src="images/ehoumaki.png"
+          alt="
+ehoumaki, comida, foco na comida, makizushi, sem seres humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, bandeja">
         <div class="text">
           <!-- 6 строчек -->
-          Kasino online SKINTOTO saat ini tidak memiliki versi untuk Android dan iOS, tetapi ada versi
-          seluler dari situs
-          tersebut, sehingga Anda dapat bermain di mana saja dan kapan saja. Semua fungsi utama akan tersedia untuk
-          Anda:
-          pengisian ulang, penarikan, kasino, slot, permainan langsung, dan banyak lagi dari ponsel atau tablet Anda.
-          SKINTOTO
-          saat ini mendukung semua sistem operasi seluler.
+          Os aplicativos revolucionaram a maneira como os brasileiros se comunicam, trabalham, e se divertem,
+          desempenhando um
+          papel fundamental na vida cotidiana. Com uma variedade de opções disponíveis, desde transporte até compras
+          online, os
+          aplicativos se tornaram uma ferramenta essencial para a conveniência e eficiência dos usuários no Brasil.
         </div>
         <a class="link" href="">
-          SKINTOTO MOBILE APK
+          sushi MOBILE APK
         </a>
       </div>
     </section>
@@ -189,20 +193,16 @@
     <section class="section">
       <div class="container">
         <h2 class="__title title">
-          Skintoto link alternatif
+          Sushi nos Cassinos: Uma Experiência Brasileira
         </h2>
         <div class="text">
           <!-- 4строчки -->
-          Anda dapat yakin bahwa Anda akan selalu dapat memainkan game favorit Anda di situs web
-          skintoto berkat tautan alternatif
-          yang selalu tersedia di tombol di bawah ini. Kami terus memperbarui tautan ke situs skintoto kami, slot dan
-          lotere
-          selalu tersedia.
+          Desfrute do sushi em cassinos brasileiros, uma fusão irresistível de sabores e entretenimento emocionante.
         </div>
-        <a class="link" href="">SKINTOTO LINK ALTERNATIF</a>
-        <img class="img" src="images/5.png" alt="5">
-
-
+        <a class="link" href="">sushi LINK ALTERNATIF</a>
+        <img class="img" src="images/prato.png"
+          alt="
+tigela, cadeira, profundidade de campo, comida, foco na comida, dentro de casa, sem seres humanos, prato, restaurante, cenário, natureza morta, mesa">
       </div>
     </section>
 
@@ -210,10 +210,10 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/12.png" alt="12">
+      <img class="img" src="images/paródia.png" alt="logotipo, paródia de logotipo, sem seres humanos">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">skintoto-id.com</a>
+        <a href="#">sushi-id.com</a>
       </div>
     </div>
   </footer>
