--- a/promosi.html
+++ b/promosi.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Skintoto adalah situs slot online, togel, roulette, craps, baccarat, situs judi online terbaik dan terbesar di Indonesia.">
+    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
   <meta name="keywords"
-    content="skintoto, daftar skintoto, login skintoto, skintoto 88, link alternatif skintoto, skintoto slot, skinslot, skintogel, bandar toto macau, agen sot online, situs slot gacor, bandar togel, agen togel, judi online, togel online, casino online, bandar togel online, agen togel terpercaya, judi online togel, judi online casino, bandar casino online, skintoto apk,">
+    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-  <title></title>
+  <!-- htnl -->
+  <!-- css -->
+  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
+  <link href="https://sushi-id.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -27,7 +29,7 @@
         <ul class="menu__items">
           <li class="menu__item">
             <a class="menu__link" href="">
-              Skintoto
+              sushi
             </a>
           </li>
           <li class="menu__item">
@@ -41,13 +43,13 @@
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="skintoto-login.html">
+            <a class="menu__link" href="sushi-login.html">
               Login
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="skintoto-slot.html">
-              Skintoto slot
+            <a class="menu__link" href="sushi-slot.html">
+              sushi slot
             </a>
           </li>
         </ul>
@@ -59,58 +61,54 @@
     <section class="section">
       <div class="container">
         <h2 class="title">
-          SKINTOTO PROMOSI
+        Promoção Eficaz
         </h2>
         <div class="subtext">
-          <span>Promosi saat ini di kasino online skintoto</span>
+          <span>Promoção: Essencial para o Sucesso</span>
         </div>
-        <img class="img" src="images/7.png" alt="7">
+        <img class="img" src="images/seios.png" alt="1 garota, cabelo preto, seios, vestido, comida, enfeite de cabelo, batom, olhando para o espectador, maquiagem, onigiri, lábios vermelhos, arroz, mangas curtas, sorriso, solo, sushi.">
         <div class="text">
-          <span class="subtext">Bonus Rollingan Slot</span>
-          <p>Contoh Perhitungan Bonus :</p>
-          <p>Total Turnover : Rp 10.000.000</p>
-          <p>Komisi Rolingan : 0.3%</p>
-          <p>Bonus Yang Didapat : Rp 10.000.000 x 0.3 % = Rp 30.000</p>
-          <span>Jadi Total Bonus Rollingan Mingguan Anda Adalah Rp 30.000</span>
-          <span>Syarat & Ketentuan :</span>
+          <span class="subtext">Bônus de Rendimento de Caça-Níqueis</span>
+          <p>Exemplo de Cálculo de Bônus:</p>
+          <p>TVolume Total de Apostas: R$ 10.000.000</p>
+          <p>Comissão de Rendimento: 0,3%</p>
+          <p>Bônus Recebido: R$ 10.000.000 x 0,3% = R$ 30.000</p>
+          <span>Portanto, seu Bônus Total de Rendimento Semanal é de R$ 30.000.</span>
+          <span>Termos e Condições:</span>
         </div>
 
         <ul class="ol">
           <li class="li">
-            1. Promosi Berlaku untuk semua Member SKINTOTO
+            1. Promo é válida para todos os membros da sushi.
           </li>
           <li class="li">
-            2. Promosi Ini Hanya Berlaku di Game Slot Online Saja.
+            2. Esta promoção só é válida para jogos de slot online.
           </li>
           <li class="li">
-            3. Periode hitungan Rollingan adalah Senin sampai dengan Minggu dan di bagikan setiap hari
-            selasa pukul
-            04.00 wib pagi
+            3. O período de cálculo do volume de negócios é de segunda-feira a domingo e é distribuído todas as terças-feiras às 04:00 da manhã, horário de Brasília.
           </li>
-          <li class="li">4. Minimal turnover untuk mendapatkan Rollingan dalam per minggunya adalah Rp 10.000.000
+          <li class="li">4. O volume de negócios mínimo para receber o bônus semanal é de R$ 10.000.000.
           </li>
           <li class="li">
-            5. Syarat dan Ketentuan dapat berubah sewaktu-waktu tanpa harus ada pemberitahuan terlebih
-            dahulu
+            5. Os termos e condições estão sujeitos a alterações sem aviso prévio.
           </li>
           <li class="li">
-            6. Semua keputusan pihak SKINTOTO sudah tidak dapat di ganggu gugat lagi
+            6. Todas as decisões da sushi não podem ser contestadas.
           </li>
         </ul>
-        <a class="link" href="">Dapatkan BONUS</a>
+        <a class="link" href="">Obtenha um BÔNUS.</a>
       </div>
     </section>
 
     <section class="section">
       <div class="container">
         <h2 class="title">
-          BONUS ROLLINGAN CASHBACK CASINO
+          Sushi Casino Brazil: Sabor e Sorte em um Só Lugar!
         </h2>
         <div class="text">
-          <span class="subtext">BONUS NEW MEMBER 100%</span>
-          Untuk semua pemain baru, kasino menawarkan bonus sambutan sebesar 100% dari jumlah setoran pertama. Manfaatkan
-          penawaran
-          terbaik ini! Bermain dan menang besar.
+          <span class="subtext">BÔNUS DE NOVO MEMBRO DE 100%.</span>
+          Descubra o Sushi Casino Brazil, onde a emoção dos jogos de azar se encontra com a delícia da culinária japonesa,
+          proporcionando uma experiência inigualável para os visitantes.
         </div>
         <a class="link" href="">BONUS 100%</a>
       </div>
@@ -119,10 +117,10 @@
 
   <footer class="footer">
     <div class="container">
-      <img class="img" src="images/8" alt="8">
+      <img class="img" src="images/folha.png" alt="peixe, comida, foco alimentar, folha, makizushi, sem humanos, onigiri, prato, arroz, camarão, natureza morta, sushi, tamagoyaki, vegetal">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">skintoto-id.com</a>
+        <a href="#">sushi-id.com</a>
       </div>
     </div>
   </footer>
