--- a/skintoto-login.html
+++ b/skintoto-login.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Skintoto adalah situs slot online, togel, roulette, craps, baccarat, situs judi online terbaik dan terbesar di Indonesia.">
+    content="Sushi-Casino-Brazil é uma experiência sensorial única que combina a riqueza da culinária japonesa com a emoção dos cassinos em território brasileiro. Desfrute dos sabores exóticos do sushi enquanto mergulha na atmosfera vibrante dos cassinos, criando momentos inesquecíveis de prazer gastronômico e entretenimento emocionante. Esta fusão cultural oferece aos visitantes uma jornada envolvente, onde os paladares refinados se encontram com a adrenalina dos jogos de azar, proporcionando uma experiência completa e inesquecível no Brasil.">
   <meta name="keywords"
-    content="skintoto, daftar skintoto, login skintoto, skintoto 88, link alternatif skintoto, skintoto slot, skinslot, skintogel, bandar toto macau, agen sot online, situs slot gacor, bandar togel, agen togel, judi online, togel online, casino online, bandar togel online, agen togel terpercaya, judi online togel, judi online casino, bandar casino online, skintoto apk,">
+    content="sushi, cassino, Brasil, comida, entretenimento, diversão, culinária japonesa, sabores exóticos, jogos de azar, experiência única, atmosfera vibrante, fusão cultural, prazer gastronômico, adrenalina, turismo, vida noturna, excelência culinária, emocionante, festa, experiência inesquecível, elegância, vibração, diversidade, destinos populares, atmosfera envolvente.">
   <meta name="robots" content="index, follow">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-  <title></title>
+  <title>Sushi-Casino-Brazil: Uma Fusão de Sabores e Entretenimento no Brasil</title>
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
-
 <body class="body">
   <header class="header">
     <div class="container">
@@ -27,7 +26,7 @@
           <ul class="menu__items">
             <li class="menu__item">
               <a class="menu__link" href="">
-                Skintoto
+                sushi
               </a>
             </li>
             <li class="menu__item">
@@ -41,13 +40,13 @@
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="skintoto-login.html">
+              <a class="menu__link" href="sushi-login.html">
                 Login
               </a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="skintoto-slot.html">
-                Skintoto slot
+              <a class="menu__link" href="sushi-slot.html">
+                sushi slot
               </a>
             </li>
           </ul>
@@ -59,16 +58,16 @@
     <section class="section">
       <div class="container">
         <h2 class="title">
-          SKINTOTO LOGIN
+          Sushi Login: Sabor e Conexão
         </h2>
         <img class="img" src="images/7.png" alt="">
         <div class="text">
           <!-- 3строчки -->
-          Akses ke situs skintot sangat mudah! ikuti tombol di bawah ini dan dapatkan banyak pilihan slot dan lotere
-          online
-          terbaik. Keberuntungan sedang menunggu Anda hari ini.
+          Descubra uma abordagem inovadora para autenticação online com Sushi Login, uma fusão de praticidade e sabor.
+          Satisfazendo seu paladar enquanto garante segurança, é uma experiência única. Experimente a delícia de acessar suas
+          contas com Sushi Login hoje mesmo!
         </div>
-        <a class="link" href="">Buka situs</a>
+        <a class="link" href="">Abra o site.</a>
       </div>
     </section>
   </main>
@@ -78,7 +77,7 @@
       <img class="img" src="" alt="">
       <div class="copy">
         <span>© Copyright 2024</span>
-        <a href="#">skintoto-id.com</a>
+        <a href="#">sushi-id.com</a>
       </div>
     </div>
   </footer>
